--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,6 +16,7 @@
         "WHO_ARE_WE": "Who are we?",
 
         "IDENTITY": {
+
             "TITLE": "What is the meaning of GAMA?",
             "PARAGRAPH": "we are a group of people who share a series of concerns surrounding the gospel and the Church of Christ. We believe that God is awakening and commissioning His Church throughout the earth to fulfill its calling and achieve the destiny God has for it",
             "VISION": {
@@ -33,6 +34,7 @@
         },
 
         "TEAM": {
+
             "NORMAL_SCREEN": {
                 "TITLE1": "MEET THE",
                 "TITLE2": "TEAM MEMBERS"
@@ -52,6 +54,52 @@
             "GUILLERMO": {
                 "DESCRIPTION": "An engineer by profession, he is responsible for supporting missionary work in all types of logistical and technical tasks, in addition to actively participating in evangelistic campaigns"
             } 
+        },
+
+        "EXPERIENCE": {
+            "TITLE_1": "YEARS",
+            "TITLE_2": "OF",
+            "TITLE_3": "EXPERIENCE",
+            "TITLE_4": "FOR",
+            "TITLE_5": "THE GLORY",
+            "TITLE_6": "OF GOD"
+        },
+
+        "JOIN_MISSION": {
+
+            "TITLE_1": "JOIN THE",
+            "TITLE_2": "2025 TOUR",
+            "DESCRIPTION": "Contact us if you attract the idea of ​​participating in Misiones, in collaboration with Local Churches and Jcum",
+
+            "FORM": {
+
+                "NAME": "Name",
+                "SURNAME": "Surname",
+                "EMAIL": "Email",
+                "PHONE_NUM": "Phone number",
+                "LOCALITY": "City",
+                "COUNTRY": "Country where you reside",
+                "TESTIMONY": "His testimony of how you met the Lord Jesus Christ",
+                "LANGUAGE": "Preferred language",
+                "PRIVACY_TEXT_1": "I have read and accepted",
+                "PRIVACY_TEXT_2": "data privacy",
+                "PRIVACY_TEXT_3": "conditions",
+
+                "BUTTON_SEND": "Send",
+                "FORM_SUCCESS_TEXT": "Missionary subscription sent successfully. We will send a message to the email address provided within a few minutes, if the network is operating normally. We will send you the web link to continue your subscription process. Thank you very much",
+                "FORM_ERROR_TEXT": "There was an error when sending the form. Please try it again",
+
+                "FIELD_ERROR_TEXT_REQUIRED": "Required field",
+                "FIELD_ERROR_TEXT_VALID_EMAIL": "Enter a valid email",
+                "FIELD_ERROR_TEXT_PHONE_NOT_VALID": "Phone number is not valid. Enter the international prefix. Example",
+
+                "NAME_PLACEHOLDER": "Write your name exactly as it appears on your ID",
+                "SURNAME_PLACEHOLDER": "Enter your last name.",
+                "EMAIL_PLACEHOLDER": "Make sure to enter an email that we have direct access to so we can keep you informed",
+                "PHONE_PLACEHOLDER": "Include your country's international prefix so we can contact you without problems",
+                "LOCALITY_PLACEHOLDER": "Municipality, city or town where you reside",
+                "TESTIMONY_PLACEHOLDER": "In a few words, tell us how you met Christ and how he has transformed your life"
+            }
         },
 
         "GAMA_MEANING": "Global Awakening Movement Association"
