--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,8 @@
         "LANGUAGE": "Language",
         "WHO_ARE_WE": "Who are we?",
 
+        "GAMA_MEANING": "Global Awakening Movement Association",
+
         "IDENTITY": {
 
             "TITLE": "What is the meaning of GAMA?",
@@ -102,6 +104,12 @@
             }
         },
 
-        "GAMA_MEANING": "Global Awakening Movement Association"
+        "FOOTER": {
+            "LINKS": "Links",
+            "CONTACT": "Contact",
+            "PRAYER_REQUEST": "Prayer Request",
+            "PRIVACY_POLICY": "Privacy Policy",
+            "LEGAL_NOTICE": "Legal Notice"
+        }
     }
 }
