Creacion videos. Cambio Anos Experiencia. Otros.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,12 +59,12 @@
         },
 
         "EXPERIENCE": {
-            "TITLE_1": "YEARS",
-            "TITLE_2": "OF",
-            "TITLE_3": "EXPERIENCE",
-            "TITLE_4": "FOR",
-            "TITLE_5": "THE GLORY",
-            "TITLE_6": "OF GOD"
+            "TITLE_1": "years",
+            "TITLE_2": "of",
+            "TITLE_3": "experience",
+            "TITLE_4": "for",
+            "TITLE_5": "the glory",
+            "TITLE_6": "of God"
         },
 
         "JOIN_MISSION": {
