--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -60,12 +60,12 @@
         },
 
         "EXPERIENCE": {
-            "TITLE_1": "AÑOS",
-            "TITLE_2": "DE",
-            "TITLE_3": "EXPERIENCIA",
-            "TITLE_4": "PARA",
-            "TITLE_5": "LA GLORIA",
-            "TITLE_6": "DE DIOS"
+            "TITLE_1": "años",
+            "TITLE_2": "de",
+            "TITLE_3": "experiencia",
+            "TITLE_4": "para",
+            "TITLE_5": "la gloria",
+            "TITLE_6": "de Dios"
         },
 
         "JOIN_MISSION": {
