--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -72,7 +72,7 @@
 
             "TITLE_1": "ÚNETE AL",
             "TITLE_2": "TOUR 2025",
-            "DESCRIPTION": "Ponte en contacto con nosotros si te atrae la idea de participar en misiones, en colaboración con iglesias locales y JCUM",
+            "DESCRIPTION": "¡Gracias por tu interés en ser parte de esta gran misión de Dios! Por favor, completa los siguientes campos para empezar el proceso de inscripción.",
 
             "FORM": {
 
@@ -82,11 +82,10 @@
                 "PHONE_NUM": "Número de teléfono",
                 "LOCALITY": "Localidad",
                 "COUNTRY": "País donde resides",
-                "TESTIMONY": "Su testimonio de cómo conoció al Señor Jesús Cristo",
-                "LANGUAGE": "Idioma de preferencia",
+                "TESTIMONY": "Tu testimonio",
+                "LANGUAGE": "Idioma preferido para completar el formulario",
                 "PRIVACY_TEXT_1": "He leído y aceptado las ondiciones de",
                 "PRIVACY_TEXT_2": "privacidad de datos",
-                "PRIVACY_TEXT_3": "",
                 
                 "FIELD_ERROR_TEXT_PHONE_NOT_VALID": "Teléfono no válido. Introduce el prefijo internacional. Ejemplo",
                 
@@ -96,6 +95,9 @@
                 "PHONE_PLACEHOLDER": "Incluye el prefijo internacional de tu país para poder contactarte sin problemas",
                 "LOCALITY_PLACEHOLDER": "Municipio, ciudad o pueblo donde resides",
                 "TESTIMONY_PLACEHOLDER": "En pocas palabras, cuéntanos cómo conociste a Cristo y cómo ha transformado tu vida",
+
+                "BOTTOM_TEXT1": "Una vez completado, envía tu solicitud y nos pondremos en contacto contigo pronto.",
+                "BOTTOM_TEXT2": "¡Estamos emocionados de poder servir juntos y unidos en esta gran obra de Dios en Europa!",
                 
                 "FORM_SUCCESS_TEXT": "Suscripción a misionero enviada con éxito. Le enviaremos un mensaje a la dirección de correo electrónico indicado en unos minutos, si la red funciona normalmente. Le haremos llegar el enlace web para seguir su proceso de suscripción. Muchas gracias",
                 "FORM_ERROR_TEXT": "Hubo un error al enviar el formulario. Por favor, inténtalo de nuevo"
