Cambios y correcion cabecera.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -71,7 +71,7 @@
 
             "TITLE_1": "JOIN THE",
             "TITLE_2": "2025 TOUR",
-            "DESCRIPTION": "Thank you for your interest in being part of this great mission of God! Please complete the following fields to start the registration process.",
+            "DESCRIPTION": "Thank you for your interest in being part of this great mission of God! Please complete the following fields to start the registration process",
 
             "FORM": {
 
@@ -96,7 +96,7 @@
                 "LOCALITY_PLACEHOLDER": "Municipality, city or town where you reside",
                 "TESTIMONY_PLACEHOLDER": "In a few words, tell us how you met Christ and how he has transformed your life",
 
-                "BOTTOM_TEXT1": "Once completed, submit your application and we will get in touch with you soon.",
+                "BOTTOM_TEXT1": "Once completed, submit your application and we will get in touch with you soon",
                 "BOTTOM_TEXT2": "We are excited to serve together and united in this great work of God in Europe!",
                 
                 "FORM_SUCCESS_TEXT": "Missionary subscription sent successfully. We will send a message to the email address provided within a few minutes, if the network is operating normally. We will send you the web link to continue your subscription process. Thank you very much",
