--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -72,7 +72,7 @@
 
             "TITLE_1": "ÚNETE AL",
             "TITLE_2": "TOUR 2025",
-            "DESCRIPTION": "¡Gracias por tu interés en ser parte de esta gran misión de Dios! Por favor, completa los siguientes campos para empezar el proceso de inscripción.",
+            "DESCRIPTION": "¡Gracias por tu interés en ser parte de esta gran misión de Dios! Por favor, completa los siguientes campos para empezar el proceso de inscripción",
 
             "FORM": {
 
@@ -97,7 +97,7 @@
                 "LOCALITY_PLACEHOLDER": "Municipio, ciudad o pueblo donde resides",
                 "TESTIMONY_PLACEHOLDER": "En pocas palabras, cuéntanos cómo conociste a Cristo y cómo ha transformado tu vida",
 
-                "BOTTOM_TEXT1": "Una vez completado, envía tu solicitud y nos pondremos en contacto contigo pronto.",
+                "BOTTOM_TEXT1": "Una vez completado, envía tu solicitud y nos pondremos en contacto contigo pronto",
                 "BOTTOM_TEXT2": "¡Estamos emocionados de poder servir juntos y unidos en esta gran obra de Dios en Europa!",
                 
                 "FORM_SUCCESS_TEXT": "Suscripción a misionero enviada con éxito. Le enviaremos un mensaje a la dirección de correo electrónico indicado en unos minutos, si la red funciona normalmente. Le haremos llegar el enlace web para seguir su proceso de suscripción. Muchas gracias",
