--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -69,8 +69,9 @@
 
         "JOIN_MISSION": {
 
-            "TITLE_1": "JOIN THE",
-            "TITLE_2": "2025 TOUR",
+            "TITLE": "REGISTRATION FORM",
+            "TITLE_1": "REGISTRATION",
+            "TITLE_2": "FORM",
             "DESCRIPTION": "Thank you for your interest in being part of this great mission of God! Please complete the following fields to start the registration process",
 
             "FORM": {
