--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -70,7 +70,7 @@
 
         "JOIN_MISSION": {
 
-            "TITLE": "FORMULARIO DE INSCRIPCIÓN",
+            "TITLE": "Formulario Inscripción",
             "TITLE_1": "FORMULARIO DE",
             "TITLE_2": "INSCRIPCIÓN",
             "DESCRIPTION": "¡Gracias por tu interés en ser parte de esta gran misión de Dios! Por favor, completa los siguientes campos para empezar el proceso de inscripción",
