--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -69,7 +69,7 @@
 
         "JOIN_MISSION": {
 
-            "TITLE": "REGISTRATION FORM",
+            "TITLE": "Registration Form",
             "TITLE_1": "REGISTRATION",
             "TITLE_2": "FORM",
             "DESCRIPTION": "Thank you for your interest in being part of this great mission of God! Please complete the following fields to start the registration process",
