Creacion Redes Sociales.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -105,6 +105,11 @@
             }
         },
 
+
+        "SOCIAL_MEDIA": {
+            "TITLE1": "TOUR UNITED FOR EUROPE"
+        },
+
         "FOOTER": {
             "LINKS": "Links",
             "CONTACT": "Contact",
