--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -107,7 +107,7 @@
 
 
         "SOCIAL_MEDIA": {
-            "TITLE1": "TOUR UNITED FOR EUROPE"
+            "TITLE1": "Tour United for Europe"
         },
 
         "FOOTER": {
