--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -107,7 +107,7 @@
         },
 
         "SOCIAL_MEDIA": {
-            "TITLE1": "TOUR UNIDOS POR EUROPA"
+            "TITLE1": "Tour Unidos por Europa"
         },
 
         "FOOTER": {
