--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -72,7 +72,7 @@
             "TITLE": "Registration Form",
             "TITLE_1": "REGISTRATION",
             "TITLE_2": "FORM",
-            "DESCRIPTION": "Thank you for your interest in being part of this great mission of God! Please complete the following fields to start the registration process",
+            "DESCRIPTION": "Thank you for your interest in being part of this God's great mission of 2025! Please complete the following fields to start the registration process",
 
             "FORM": {
 
