Actualizacion de finalizacion mision anual.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -73,7 +73,7 @@
             "TITLE": "Formulario Inscripción",
             "TITLE_1": "FORMULARIO DE",
             "TITLE_2": "INSCRIPCIÓN",
-            "DESCRIPTION": "¡Gracias por tu interés en ser parte de esta gran misión de Dios de 2025! Por favor, completa los siguientes campos para empezar el proceso de inscripción",
+            "DESCRIPTION": "¡Gracias por tu interés en ser parte de la siguiente gran misión de Dios de 2026! Por favor, completa los siguientes campos para empezar el proceso de inscripción",
 
             "FORM": {
 
